Creo esercizio delle mail

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     
-    
+    <div class="container">
+        <div id="email"></div>
+        <div id="check_email"></div>
+        <div id="lista_email"></div>
+    </div>
 
     <script src="./assets/js/main.js"></script>
 
