--- a/dadi/index.html
+++ b/dadi/index.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mail</title>
+    <title>Dadi</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     
-    <div class="container">
-        <div id="email"></div>
-        <div id="check_email"></div>
-        <div id="lista_email"></div>
-    </div>
+
 
     <script src="./assets/js/main.js"></script>
 
