Sistemo js e css

--- a/dadi/index.html
+++ b/dadi/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     
-
-
+    <div class="container">
+        <div id="giocatore"></div>
+        <div id="computer"></div>
+        <div id="vincitore"></div>
+    </div>
+    
     <script src="./assets/js/main.js"></script>
 
 </body>
