--- a/dadi/bonus.html
+++ b/dadi/bonus.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <a href="./bonus.html">Bonus</a>
+    <a href="./index.html">Home</a>
     
     <div class="container">
         <div id="giocatore"></div>
@@ -17,7 +17,7 @@
         <div id="vincitore"></div>
     </div>
 
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/bonus.js"></script>
 
 </body>
 </html>
