Termino il bonus dei dadi

--- a/dadi/bonus.html
+++ b/dadi/bonus.html
@@ -12,8 +12,10 @@
     <a href="./index.html">Home</a>
     
     <div class="container">
+        <div id="giocate"></div>
         <div id="giocatore"></div>
         <div id="computer"></div>
+        <div id="pareggio"></div>
         <div id="vincitore"></div>
     </div>
 
